[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["javad bathaei <javadbat@gmail.com>"]
description = "A heelo world project to try wasm in our app"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window"
]
